--- a/Monster Smash/Assets/Plugins/Android/everyplay/AndroidManifest.xml
+++ b/Monster Smash/Assets/Plugins/Android/everyplay/AndroidManifest.xml
@@ -75,8 +75,10 @@
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-feature android:name="android.hardware.telephony" android:required="false"></uses-feature>
   <uses-feature android:name="android.hardware.touchscreen" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch.distinct" android:required="false" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
+  
 </manifest>
